[project]
name = "ASGIMiddleware"
version = "0.1.9"
description = "Connexion-based ASGI Middleware collection"
authors = [
    {name = "mszymutk", email = "mszymutk@redhat.com"},
    {name = "Red Hat Release Engineering"},
]
dependencies = [
    "starlette>=0.37.2",
    "connexion>=3.1.0",
    "prometheus-client>=0.20.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/release-engineering/ASGI-Middlewares"
Issues = "https://github.com/release-engineering/ASGI-Middlewares/issues"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.black]
skip-string-normalization = true
target-version = ['py312']

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]

tox = [
    "tox>=4.15.1",
    "tox-pdm>=0.7.2",
]

[dependency-groups]
dev = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "coverage>=7.5.3",
    "pytest-cov>=5.0.0",
    "black>=26.1.0",
    "pylint>=3.2.3",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-instrumentation-aiohttp-client>=0.46b0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-instrumentation-starlette>=0.46b0",
    "connexion[uvicorn]>=3.1.0",
    "mypy>=1.10.0",
    "bandit>=1.7.9",
]
